ajuste de estilo final

--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -251,33 +251,11 @@
 .title-middle-line
   padding 20px 0
   height auto
-  text-align center
+  text-align left
   position relative
   color fontClr
-  .text-content
-    position absolute
-    left 0
-    right 0
-    z-index 9
-    background white
-    width 40%
-    margin 0 auto
-    &:before
-      content ''
-      position absolute
-      left 0
-      color fontClr
-      font-size 40px
-      top -12px
-    &:after
-      content ''
-      position absolute
-      right 0
-      color fontClr
-      font-size 40px
-      top -12px  
-    .font-type
-      text-transform uppercase
+  .font-type
+    text-transform uppercase
   hr
     position absolute
     border 1px solid black
