--- a/app/css/core/loader.styl
+++ b/app/css/core/loader.styl
@@ -8,515 +8,44 @@
 .block-ui-message
   background transparent
 
-.sk-circle
-  margin 20px auto
-  width 60px
-  height 60px
-  position relative
-  .sk-child
-    width 100%
-    height 100%
-    position absolute
-    left 0
-    top 0
-    &:before
-      content ''
-      display block
-      margin 0 auto
-      width 20%
-      height 20%
-      background-color orange
-      border-radius 100%
-      -webkit-animation sk-circleBounceDelay 1.2s infinite ease-in-out both
-      animation sk-circleBounceDelay 1.2s infinite ease-in-out both
-  .sk-circle2
-    -webkit-transform rotate(30deg)
-    -ms-transform rotate(30deg)
-    transform rotate(30deg)
-    &:before
-      -webkit-animation-delay -1.1s
-      animation-delay -1.1s
-  .sk-circle3
-    -webkit-transform rotate(60deg)
-    -ms-transform rotate(60deg)
-    transform rotate(60deg)
-    &:before
-      -webkit-animation-delay -1s
-      animation-delay -1s
-  .sk-circle4
-    -webkit-transform rotate(90deg)
-    -ms-transform rotate(90deg)
-    transform rotate(90deg)
-    &:before
-      -webkit-animation-delay -0.9s
-      animation-delay -0.9s
-  .sk-circle5
-    -webkit-transform rotate(120deg)
-    -ms-transform rotate(120deg)
-    transform rotate(120deg)
-    &:before
-      -webkit-animation-delay -0.8s
-      animation-delay -0.8s
-  .sk-circle6
-    -webkit-transform rotate(150deg)
-    -ms-transform rotate(150deg)
-    transform rotate(150deg)
-    &:before
-      -webkit-animation-delay -0.7s
-      animation-delay -0.7s
-  .sk-circle7
-    -webkit-transform rotate(180deg)
-    -ms-transform rotate(180deg)
-    transform rotate(180deg)
-    &:before
-      -webkit-animation-delay -0.6s
-      animation-delay -0.6s
-  .sk-circle8
-    -webkit-transform rotate(210deg)
-    -ms-transform rotate(210deg)
-    transform rotate(210deg)
-    &:before
-      -webkit-animation-delay -0.5s
-      animation-delay -0.5s
-  .sk-circle9
-    -webkit-transform rotate(240deg)
-    -ms-transform rotate(240deg)
-    transform rotate(240deg)
-    &:before
-      -webkit-animation-delay -0.4s
-      animation-delay -0.4s
-  .sk-circle10
-    -webkit-transform rotate(270deg)
-    -ms-transform rotate(270deg)
-    transform rotate(270deg)
-    &:before
-      -webkit-animation-delay -0.3s
-      animation-delay -0.3s
-  .sk-circle11
-    -webkit-transform rotate(300deg)
-    -ms-transform rotate(300deg)
-    transform rotate(300deg)
-    &:before
-      -webkit-animation-delay -0.2s
-      animation-delay -0.2s
-  .sk-circle12
-    -webkit-transform rotate(330deg)
-    -ms-transform rotate(330deg)
-    transform rotate(330deg)
-    &:before
-      -webkit-animation-delay -0.1s
-      animation-delay -0.1s
+.spinner {
+  margin: 50px auto 0;
+  width: 70px;
+  text-align: center;
+}
 
+.spinner > div {
+  width: 18px;
+  height: 18px;
+  background-color: red;
 
-@-webkit-keyframes sk-circleBounceDelay
-  0%, 80%, 100%
-    -webkit-transform: scale(0)
-  40%
-    -webkit-transform: scale(1.0)
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
 
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
 
-@keyframes sk-circleBounceDelay
-  0%, 80%, 100%
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% { 
     -webkit-transform: scale(0);
     transform: scale(0);
-  40%
+  } 40% { 
     -webkit-transform: scale(1.0);
     transform: scale(1.0);
-
-/* spinner list circle*/
-.spinner
-  margin 20px auto 0
-  width 70px
-  text-align center
-
-
-.spinner > div
-  width 18px
-  height 18px
-  background-color danger
-
-  border-radius 100%
-  display inline-block
-  -webkit-animation sk-bouncedelay 1.4s infinite ease-in-out both
-  animation sk-bouncedelay 1.4s infinite ease-in-out both
-
-
-.spinner .bounce1
-  -webkit-animation-delay -0.32s
-  animation-delay -0.32s
-
-
-.spinner .bounce2
-  -webkit-animation-delay -0.16s
-  animation-delay -0.16s
-
-
-@-webkit-keyframes sk-bouncedelay
-  0%, 80%, 100%
-    -webkit-transform: scale(0)
-  40%
-    -webkit-transform: scale(1.0)
-
-@keyframes sk-bouncedelay
-    0%, 80%, 100%
-      -webkit-transform scale(0)
-      transform scale(0)
-
-    40%
-      -webkit-transform scale(1.0)
-      transform scale(1.0)
-
-@-webkit-keyframes heartbeat {
-  0% {
-    -moz-transform: rotate(45deg) scale(1);
-    -ms-transform: rotate(45deg) scale(1);
-    -webkit-transform: rotate(45deg) scale(1);
-    transform: rotate(45deg) scale(1);
-  }
-  14% {
-    -moz-transform: rotate(45deg) scale(1.3);
-    -ms-transform: rotate(45deg) scale(1.3);
-    -webkit-transform: rotate(45deg) scale(1.3);
-    transform: rotate(45deg) scale(1.3);
-  }
-  28% {
-    -moz-transform: rotate(45deg) scale(1);
-    -ms-transform: rotate(45deg) scale(1);
-    -webkit-transform: rotate(45deg) scale(1);
-    transform: rotate(45deg) scale(1);
-  }
-  42% {
-    -moz-transform: rotate(45deg) scale(1.3);
-    -ms-transform: rotate(45deg) scale(1.3);
-    -webkit-transform: rotate(45deg) scale(1.3);
-    transform: rotate(45deg) scale(1.3);
-  }
-  70% {
-    -moz-transform: rotate(45deg) scale(1);
-    -ms-transform: rotate(45deg) scale(1);
-    -webkit-transform: rotate(45deg) scale(1);
-    transform: rotate(45deg) scale(1);
-  }
-}
-@-moz-keyframes heartbeat {
-  0% {
-    -moz-transform: rotate(45deg) scale(1);
-    -ms-transform: rotate(45deg) scale(1);
-    -webkit-transform: rotate(45deg) scale(1);
-    transform: rotate(45deg) scale(1);
-  }
-  14% {
-    -moz-transform: rotate(45deg) scale(1.3);
-    -ms-transform: rotate(45deg) scale(1.3);
-    -webkit-transform: rotate(45deg) scale(1.3);
-    transform: rotate(45deg) scale(1.3);
-  }
-  28% {
-    -moz-transform: rotate(45deg) scale(1);
-    -ms-transform: rotate(45deg) scale(1);
-    -webkit-transform: rotate(45deg) scale(1);
-    transform: rotate(45deg) scale(1);
-  }
-  42% {
-    -moz-transform: rotate(45deg) scale(1.3);
-    -ms-transform: rotate(45deg) scale(1.3);
-    -webkit-transform: rotate(45deg) scale(1.3);
-    transform: rotate(45deg) scale(1.3);
-  }
-  70% {
-    -moz-transform: rotate(45deg) scale(1);
-    -ms-transform: rotate(45deg) scale(1);
-    -webkit-transform: rotate(45deg) scale(1);
-    transform: rotate(45deg) scale(1);
-  }
-}
-@-o-keyframes heartbeat {
-  0% {
-    -moz-transform: rotate(45deg) scale(1);
-    -ms-transform: rotate(45deg) scale(1);
-    -webkit-transform: rotate(45deg) scale(1);
-    transform: rotate(45deg) scale(1);
-  }
-  14% {
-    -moz-transform: rotate(45deg) scale(1.3);
-    -ms-transform: rotate(45deg) scale(1.3);
-    -webkit-transform: rotate(45deg) scale(1.3);
-    transform: rotate(45deg) scale(1.3);
-  }
-  28% {
-    -moz-transform: rotate(45deg) scale(1);
-    -ms-transform: rotate(45deg) scale(1);
-    -webkit-transform: rotate(45deg) scale(1);
-    transform: rotate(45deg) scale(1);
-  }
-  42% {
-    -moz-transform: rotate(45deg) scale(1.3);
-    -ms-transform: rotate(45deg) scale(1.3);
-    -webkit-transform: rotate(45deg) scale(1.3);
-    transform: rotate(45deg) scale(1.3);
-  }
-  70% {
-    -moz-transform: rotate(45deg) scale(1);
-    -ms-transform: rotate(45deg) scale(1);
-    -webkit-transform: rotate(45deg) scale(1);
-    transform: rotate(45deg) scale(1);
-  }
-}
-@keyframes heartbeat {
-  0% {
-    -moz-transform: rotate(45deg) scale(1);
-    -ms-transform: rotate(45deg) scale(1);
-    -webkit-transform: rotate(45deg) scale(1);
-    transform: rotate(45deg) scale(1);
-  }
-  14% {
-    -moz-transform: rotate(45deg) scale(1.3);
-    -ms-transform: rotate(45deg) scale(1.3);
-    -webkit-transform: rotate(45deg) scale(1.3);
-    transform: rotate(45deg) scale(1.3);
-  }
-  28% {
-    -moz-transform: rotate(45deg) scale(1);
-    -ms-transform: rotate(45deg) scale(1);
-    -webkit-transform: rotate(45deg) scale(1);
-    transform: rotate(45deg) scale(1);
-  }
-  42% {
-    -moz-transform: rotate(45deg) scale(1.3);
-    -ms-transform: rotate(45deg) scale(1.3);
-    -webkit-transform: rotate(45deg) scale(1.3);
-    transform: rotate(45deg) scale(1.3);
-  }
-  70% {
-    -moz-transform: rotate(45deg) scale(1);
-    -ms-transform: rotate(45deg) scale(1);
-    -webkit-transform: rotate(45deg) scale(1);
-    transform: rotate(45deg) scale(1);
-  }
-}
-
-/* Styles for old versions of IE */
-.heartbeat {
-  font-family: sans-serif;
-  font-weight: 100;
-  margin-left: 10px
-  top: -15px
-}
-
-/* :not(:required) hides this rule from IE9 and below */
-.heartbeat:not(:required) {
-  -webkit-animation: heartbeat 1300ms ease 0s infinite normal;
-  -khtml-animation: heartbeat 1300ms ease 0s infinite normal;
-  -moz-animation: heartbeat 1300ms ease 0s infinite normal;
-  -ms-animation: heartbeat 1300ms ease 0s infinite normal;
-  -o-animation: heartbeat 1300ms ease 0s infinite normal;
-  animation: heartbeat 1300ms ease 0s infinite normal;
-  display: inline-block;
-  position: relative;
-  overflow: hidden;
-  text-indent: -9999px;
-  padding-left: 30px;
-  width: 36px;
-  height: 36px;
-  -moz-transform: rotate(45deg) scale(1);
-  -ms-transform: rotate(45deg) scale(1);
-  -webkit-transform: rotate(45deg) scale(1);
-  transform: rotate(45deg) scale(1);
-  -moz-transform-origin: 50% 50%;
-  -ms-transform-origin: 50% 50%;
-  -webkit-transform-origin: 50% 50%;
-  transform-origin: 50% 50%;
-}
-.heartbeat:not(:required):after, .heartbeat:not(:required):before {
-  position: absolute;
-  content: "";
-  background: optional;
-}
-.heartbeat:not(:required):before {
-  -moz-border-radius-topleft: 12px;
-  -webkit-border-top-left-radius: 12px;
-  border-top-left-radius: 12px;
-  -moz-border-radius-bottomleft: 12px;
-  -webkit-border-bottom-left-radius: 12px;
-  border-bottom-left-radius: 12px;
-  top: 12px;
-  left: 0;
-  width: 36px;
-  height: 24px;
-}
-.heartbeat:not(:required):after {
-  -moz-border-radius-topleft: 12px;
-  -webkit-border-top-left-radius: 12px;
-  border-top-left-radius: 12px;
-  -moz-border-radius-topright: 12px;
-  -webkit-border-top-right-radius: 12px;
-  border-top-right-radius: 12px;
-  top: 0;
-  left: 12px;
-  width: 24px;
-  height: 12px;
-}
-
-@keyframes rotateBox {
-  0% {
-    transform: rotate(0deg) scale(1);
-    width: 100px;
-    height: 60px;
-  }
-  20% {
-    transform: rotate(0deg);
-    width: 100px;
-    height: 60px;
-  }
-  60% {
-    transform: rotate(0deg);
-    width: 60px;
-    height: 60px;
-  }
-  100% {
-    transform: rotate(90deg);
-    width: 60px;
-    height: 100px;
-  }
-}
-@keyframes scaleSides {
-  0% {
-    transform: scale(1);
-    margin: 0px;
-  }
-  20% {
-    transform: scale(1);
-    margin: 0px;
-  }
-  60% {
-    transform: scale(0.5);
-    margin: 10px;
-  }
-  100% {
-    transform: scale(1);
-    margin: 0px;
-  }
-}
-.loader-container {
-  position: absolute;
-  top: 150px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.loader-container .loader {
-  position: relative;
-  width: 100px;
-  height: 60px;
-  animation: rotateBox 2s linear infinite;
-}
-.loader-container .loader span {
-  position: absolute;
-  background: #000;
-  animation: scaleSides 2s linear infinite;
-}
-.loader-container .loader span:nth-of-type(1) {
-  width: 100%;
-  height: 2px;
-  left: 0;
-  top: 0;
-}
-.loader-container .loader span:nth-of-type(2) {
-  width: 2px;
-  height: 100%;
-  left: 0;
-  bottom: 0;
-}
-.loader-container .loader span:nth-of-type(3) {
-  width: 100%;
-  height: 2px;
-  right: 0;
-  bottom: 0;
-}
-.loader-container .loader span:nth-of-type(4) {
-  width: 2px;
-  height: 100%;
-  right: 0;
-  top: 0;
-}
-.lds-spinner {
-  color: official;
-  display: inline-block;
-  position: relative;
-  top: 30px;
-  left: 30px;
-  right: 0;
-  margin: 0 auto;
-  width: 64px;
-  height: 64px;
-}
-.lds-spinner div {
-  transform-origin: 32px 32px;
-  animation: lds-spinner 1.2s linear infinite;
-}
-.lds-spinner div:after {
-  content: " ";
-  display: block;
-  position: absolute;
-  top: 3px;
-  left: 29px;
-  width: 5px;
-  height: 14px;
-  border-radius: 20%;
-  background: black;
-}
-.lds-spinner div:nth-child(1) {
-  transform: rotate(0deg);
-  animation-delay: -1.1s;
-}
-.lds-spinner div:nth-child(2) {
-  transform: rotate(30deg);
-  animation-delay: -1s;
-}
-.lds-spinner div:nth-child(3) {
-  transform: rotate(60deg);
-  animation-delay: -0.9s;
-}
-.lds-spinner div:nth-child(4) {
-  transform: rotate(90deg);
-  animation-delay: -0.8s;
-}
-.lds-spinner div:nth-child(5) {
-  transform: rotate(120deg);
-  animation-delay: -0.7s;
-}
-.lds-spinner div:nth-child(6) {
-  transform: rotate(150deg);
-  animation-delay: -0.6s;
-}
-.lds-spinner div:nth-child(7) {
-  transform: rotate(180deg);
-  animation-delay: -0.5s;
-}
-.lds-spinner div:nth-child(8) {
-  transform: rotate(210deg);
-  animation-delay: -0.4s;
-}
-.lds-spinner div:nth-child(9) {
-  transform: rotate(240deg);
-  animation-delay: -0.3s;
-}
-.lds-spinner div:nth-child(10) {
-  transform: rotate(270deg);
-  animation-delay: -0.2s;
-}
-.lds-spinner div:nth-child(11) {
-  transform: rotate(300deg);
-  animation-delay: -0.1s;
-}
-.lds-spinner div:nth-child(12) {
-  transform: rotate(330deg);
-  animation-delay: 0s;
-}
-@keyframes lds-spinner {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
   }
 }
