--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,5 @@
 <div id="home">
-    <section class="slider-box">
+    <section class="slider-box hide-xs">
         <data-owl-carousel class="owl-carousel owl-theme owl-theme-slider" data-options="Home.owlOptionsSlider">
             <div owl-carousel-item="" ng-repeat="slide in Home.mainSlider" class="item">
                 <div class="item" style="width: 100%;">
