--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -170,38 +170,45 @@ md-input-container
 /* ------ TEMP PRODUCT DETAIL STYLE ----- */
 .temp-product-detail, .md-dialog-content
   background-color #f6f6f6
+  #product-detail 
+    background-color white
+    .wrapper 
+      padding 30px 0
+    .wip-image-zoom .main-image
+      height 400px
+      width auto
+      margin 0 auto
+    .article-description  
+      padding 40px 0
+      border-left 1px solid #ddd
   .title-prd
-    font-size 26px
+    font-size 22px
     text-transform uppercase
-    border-top 1px solid fontClr
-    border-bottom 1px solid fontClr
     padding 10px 0
   .article-price 
     font-size 22px  
   md-input-container .md-input
     background-color white
-    border 1px solid fontClr
+    border 1px solid #ddd
     color fontClr
   .md-select-value      
     padding 2px 8px 1px !important
     background-color white
     md-input-container > md-select
-      border 1px solid fontClr
+      border 1px solid #ddd
       color fontClr
     md-input-container .md-input
-      border 1px solid fontClr
+      border 1px solid #ddd
       padding 0 10px  
     md-input-container.md-default-theme:not(.md-input-invalid).md-input-focused .md-input, md-input-container:not(.md-input-invalid).md-input-focused .md-input, md-input-container.md-default-theme:not(.md-input-invalid).md-input-resized .md-input, md-input-container:not(.md-input-invalid).md-input-resized .md-input
-      border 1px solid black  
+      border 1px solid #ddd  
   .bg-image-single
     background-size cover
     background-position bottom
     height 600px
   .box-description-detail-product
     padding 20px 0
-    border-top 1px solid fontClr
-    border-bottom 1px solid fontClr
-    margin-top 30px
+    border-top 1px solid #ddd
     h4
       text-transform uppercase  
       padding-bottom: 20px;  
@@ -460,4 +467,4 @@ footer
     &._md
       max-height 240px
 md-input-container > md-select
-  border 1px solid fontClr
+  border 1px solid #ddd
