ajuste de estilo categorias

--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -176,20 +176,25 @@
     .box-title
       color fontClr !important
   .box-header
+    backgroubd-color white
+    text-align center
     .box-bg-img
       background-position bottom
       background-repeat no-repeat
       background-size contain
       height 300px
+    .img-box
+      height 200px  
   .box-container
     text-align center
     margin-bottom 15px
     padding-top 15px 
     margin-top 15px 
-    height 70px
     border-top 1px solid #ddd
-    .box-title
+    .price 
       font-weight bold
+    .box-title
+      height 50px
       font-size 16px
   .box-footer
     text-align center
