--- a/app/css/layout/responsive.styl
+++ b/app/css/layout/responsive.styl
@@ -66,67 +66,31 @@
 
 
 @media only screen and (min-width: 768px) and (max-width: 1024px)
-  .navbar-toggler span 
-    color fontClr
-  .slider-box .slider-img
-    background-size cover
-  .one-rows-nav .first-row .nav-link
-    font-size 13px 
-  .one-rows-nav
-    .first-row
-      background-color white
-      .navbar-nav
-        flex-direction row
-  .shopcart-qty > input
-    margin 0 auto
-  .btn-sm
-    padding 5px 5px !important
-    font-size 14px !important
-  .nav-user > li
-    float left !important
-  .nav-user 
-    background transparent !important
-    margin-top 0 !important
-    box-shadow none !important
-    border-top 0 !important
-    .btn
-      font-size 14px
-      padding 5px 5px !important
-
-  .hide-tablet
-    display inline
-  .mobile, .ca-phone
+  .navbar-light .navbar-toggler
     display none
-  .header .navbar-default
-    height 80px
-  .excerpt-shopping
-    padding-top 50px
-  .detail-qty
-    margin-left 42%
-  .detail-price
-    text-align center !important
-  .product-info
-    height 142px
-  .header-title
-    height auto
-  .header-title .title
-    padding 20px 0
-  .content
-    margin-top 175px
-  .services .box-service h3 
-    padding 12px 20px 0
-    text-align center
-
-  #contact-section
-    background-size cover
-    padding 30px 0
-
+  .temp-categories
+    .col-md-4 
+      -ms-flex 0 0 50%
+      flex 0 0 50%
+      max-width 50%
+  .one-rows-nav .navbar-brand .logo
+    width 100px
+  .navbar
+    .collapse 
+      display contents  
+    .navbar-nav 
+      flex-direction row
+  .first-row  
+    .data-social-media
+      display none 
   .menu-dash
     .menu-item
       margin-bottom 10px
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .box-simple .box-header .img-box
+    height 120px
   .box-simple
     padding 0
   .temp-product-detail .bg-image-single, .md-dialog-content .bg-image-single 
