--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -21,22 +21,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-3 col-6" ng-repeat="product in Home.products">
-                    <div class="box-simple">
-                        <div class="box-header">
-                            <a ui-sref="product-detail({slug:product.slug})" title="Ver más">
-                                <div class="box-bg-img"
-                                style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}')"></div>
-                            </a>
-                        </div>
-                        <div class="box-container">
-                            <div class="row align-items-center">
-                                <div class="col-sm-12">
-                                    <p>{{ product.name | limitTo:40}} </p>
-                                    <p><strong>{{ product.price | currency }}</strong></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <ng-include src="'/templates/partials/box-product.html'"></ng-include>
                 </div>
             </div>
         </div>
