--- a/app/templates/partials/box-product.html
+++ b/app/templates/partials/box-product.html
@@ -1,17 +1,19 @@
 <div class="box-simple">
     <div class="box-header">
         <a ui-sref="product-detail({slug:product.slug})" title="Ver más">
-            <div class="box-bg-img"
+            <img class="img-box" src="{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}" alt="{{ product.name }}">
+            <!--<div class="box-bg-img"
             style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}')"></div>
+            -->
         </a>
     </div>
     <div class="box-container">
         <div class="row align-items-center">
-            <div ng-class="product.offerPrice > 0 ? 'col-sm-12': 'col-sm-8'">
+            <div class="col-sm-12">
                 <p class="box-title">{{ product.name | limitTo:40}}</p>
             </div>
-            <div ng-class="product.offerPrice > 0 ? 'hide': 'col-sm-4'">
-                <p>{{ product.price | currency }}</p>
+            <div class="col-md-12" ng-class="product.offerPrice > 0 ? 'hide': 'col-sm-4'">
+                <p class="price">{{ product.price | currency }}</p>
             </div>
             <div class="col-sm-12 no-padding" ng-if="product.offerPrice > 0">
                 <div class="container">
@@ -28,13 +30,5 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="box-footer">
-        <div class="row">
-            <div class="col-sm-12"> 
-                <a ui-sref="product-detail({slug:product.slug})" class="btn btn-block btn-white">Comprar</a>
-            </div>
-        </div>
-        <!--<p class="label-danger" ng-if="product.taxonomy = '6060'"> Producto agotado</p>-->
     </div>
 </div>
