--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -32,7 +32,7 @@
             </div>
         </div>
     </div>
-    <nav class="navbar navbar-expand-lg navbar-dark nav-theme">
+    <nav class="navbar navbar-expand-lg navbar-light nav-theme">
         <div class="container">
             <a ui-sref="home" class="navbar-brand">
                 <img src="img/logo.png" class="logo" alt="Lady Paola">
