--- a/app/templates/service-detail.html
+++ b/app/templates/service-detail.html
@@ -17,6 +17,19 @@
                                     <h4>{{Service.detail.name}}</h4>
                                     <br>
                                 </div>
+                                <div class="col-sm-12" ng-controller="ShoppingCtrl as Shop">
+                                    <button ng-click="Shop.setItem({id: Service.detail.id, name: Service.detail.name,
+                                        price: Service.detail.price, image: Service.detail.featuredImage.url,
+                                        qty: 1, taxonomies : Service.detail.taxonomies,
+                                         shipmentPrice: Service.detail.shipmentPrice, typeTax: Service.detail.typeTax,
+                                          stock: 1, offerPrice: Service.detail.offerPrice,
+                                           priceList: Service.detail.priceList, prices: Service.detail.prices},
+                                           1)"
+                                            ng-disabled="Shop.itemInCart(Service.detail.id)|| FormQty.$invalid"
+                                            class="btn btn-optional"> <i class="fa fa-shopping-cart"></i>Agregar a carrito
+                                    </button>
+
+                                </div>
                             </div>
                         </div>
                     </div>
